// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Button CTA button - icon after renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--call\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">CTA Button with icon</span>

    <svg
      class=\\"ecl-icon ecl-icon--fluid ecl-button__icon ecl-button__icon--after\\"
      focusable=\\"false\\"
      aria-hidden=\\"true\\"
    >
      <use xlink:href=\\"static/icons.svg#ui--corner-arrow\\"></use>
    </svg>
  </span>
</button>
"
`;

exports[`EC - Button CTA button - icon before renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--call\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <svg
      class=\\"ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--before\\"
      focusable=\\"false\\"
      aria-hidden=\\"true\\"
    >
      <use xlink:href=\\"static/icons.svg#ui--corner-arrow\\"></use>
    </svg>
    <span class=\\"ecl-button__label\\">Call to action button</span>
  </span>
</button>
"
`;

exports[`EC - Button CTA renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--call\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Call to action button</span>

    <svg
      class=\\"ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after\\"
      focusable=\\"false\\"
      aria-hidden=\\"true\\"
    >
      <use xlink:href=\\"static/icons.svg#ui--corner-arrow\\"></use>
    </svg>
  </span>
</button>
"
`;

exports[`EC - Button Ghost renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--ghost\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Ghost button</span>
  </span>
</button>
"
`;

exports[`EC - Button Primary renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--primary\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Primary button</span>
  </span>
</button>
"
`;

exports[`EC - Button Search renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--search\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Search button</span>
  </span>
</button>
"
`;

exports[`EC - Button Secondary renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--secondary\\" type=\\"submit\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Secondary button</span>
  </span>
</button>
"
`;
